2003-01-20  Pavel Roskin  <proski@gnu.org>

	* dir.c (handle_dirent): Fix cleaning the stat buffer if
	mc_lstat() fails.  Leave buf1->st_mode to be 0, so that the
	entry is marked as a "non-regular file of unknown kind".
	* screen.c (do_enter_on_file_entry): Try to change directory
	when pressing Enter on a non-stat()able file.

	* screen.c (string_file_type): Represent non-regular files of
	unknown kind by '?'.
	(file_compute_color): Use for them the same color as for stale
	links.

	* main.c: Change default value of full_eight_bits to 0 - it's
	reported to be broken on many terminals.

	* man2hlp.c (main): Initialize cnode->heading_level.
	Bug report by Tribhuvan <loka@rcn.com>

	* dir.c (sort_size): Avoid any arithmetic except comparison on
	file sizes - they may not fit "int" that the function returns.
	Original patch by Bulia Byak <bulia@dr.com>

2003-01-20  Andrew V. Samoilov  <sav@bcs.zp.ua>

	* profile.c (load): Handle corrupted section header.
	Reported by skol@sbox.tugraz.at.
	(GetPrivateProfileInt): Make intBuf and buf auto variables.

2003-01-20  Pavel Roskin  <proski@gnu.org>

	* screen.c (do_search): Use case-insensitive search if and only
	if the sort order is case-insensitive.
	Suggested by Bulia Byak <bulia@dr.com>

2003-01-19  Pavel Roskin  <proski@gnu.org>

	* dir.c (do_load_dir): Remove dotdot_found - handle_dirent()
	doesn't process ".." now.  Don't add ".." to the "/" directory.
	(do_reload_dir): Likewise.
	Suggested by Bulia Byak <bulia@dr.com>

	* dir.c (handle_dirent): If mc_lstat() fails, assume that the
	entry is a directory.  This is useful for QNX Neutrino.

2003-01-15  Andrew V. Samoilov  <sav@bcs.zp.ua>

	* man2hlp.c (fclose_check): Call ferror() and exit on file
	error.

	* man2hlp.c (main): Use fgets() return value in while loop
	instead of feof() because end-of-file indicator can be false on
	error.

	* man2hlp.c (handle_command): Fix possible buffer overflow.
	(handle_link): Likewise.

2002-12-27  Pavel Roskin  <proski@gnu.org>
